--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "sdk-server-web",
   "version": "0.0.1",
-  "description": "全景模板1",
-  "productName": "所见即拥有",
+  "description": "json转golang结构体",
+  "productName": "json转golang结构体",
   "author": "demon <infinitedemon@foxmail.com>",
-  "homepage": "https://otouch.shanghaichujie.com/template-1",
+  "homepage": "https://wechat.aliyun.demonhh.com/json2struct",
   "private": true,
   "scripts": {
     "lint": "eslint --ext .js,.vue ./",
