--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,8 @@ my_deploy:
     paths:
       - dist
   script:
-    - /ossutil sync dist oss://wechat-aliyun/${CI_PROJECT_NAME}/dist --delete -f
+    - /ossutil rm oss://wechat-aliyun/${CI_PROJECT_NAME}/dist -r
+    - /ossutil cp -r dist oss://wechat-aliyun/${CI_PROJECT_NAME}/dist
     - echo "项目预览为：https://wechat.aliyun.demonhh.com/${CI_PROJECT_NAME}/dist/ + 你的index.html所在路径"
     - echo "例如我常规的单页应用预览地址为：https://wechat.aliyun.demonhh.com/${CI_PROJECT_NAME}/dist/spa/index.html"
   tags:
